tests/valid/Print_Valid_1.whiley
void main([string] args):
     out->println(str(1))
