tests/invalid/MethodCall_CompileFail_1.whiley
void f(int x):
    print str(x)

void main([string] args):
    this->f(1)
